--- a/DuplicateDetection.Console/Properties/launchSettings.json
+++ b/DuplicateDetection.Console/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DuplicateDetection.Console": {
       "commandName": "Project",
-      "commandLineArgs": "\"c:\\temp\""
+      "commandLineArgs": "c:\\temp --size"
     }
   }
 }
